Add multi-module Gradle project with in-depth JDK 8/11/17/21/25 feature demos
Each jdkNN module is pinned to its own Gradle Java toolchain and contains
runnable, in-depth demos (with main methods, verified against the real
JDK binaries) for that version's major language and API additions:
lambdas/streams/Optional/java.time/CompletableFuture (8), the HTTP Client
and var-in-lambda-params (11), sealed classes/records/pattern matching/
switch expressions (17), record patterns/virtual threads/sequenced
collections (21), and scoped values/compact source files/the KDF and
Class-File APIs/Stream Gatherers (25).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>